--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
  
   
-  <link rel="icon" type="image/png" sizes="64x64" href="/alticon (1).png" />
+  <link rel="icon" type="image/png" sizes="64x64" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nexus Analytics</title>
   </head>
