--- a/frontend/index.html
+++ b/frontend/index.html
@@ -3,10 +3,20 @@
   <head>
     <meta charset="UTF-8" />
  
+    <title>Nexus Analytics - Modern Data Insights</title>
+    <meta name="description" content="A sleek, high-performance analytics dashboard." />
   
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yournexusdomain.com/" />
+    <meta property="og:title" content="Nexus Analytics - Real-Time Insights" />
+    <meta property="og:description" content="Fixing layout shifts and optimizing data visualization." />
+    <meta property="og:image" content="/icon.png" />
+  
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Nexus Analytics" />
   <link rel="icon" type="image/png" sizes="64x64" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nexus Analytics</title>
+    
   </head>
   <body>
     <div id="root"></div>
