Add google site verification

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -16,7 +16,7 @@
     <meta property="twitter:title" content="Nexus Analytics" />
   <link rel="icon" type="image/png" sizes="64x64" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+    <meta name="google-site-verification" content="BDec0ChD1k9zzWNnQuLBWaltF4_iuRc87WXs-5BT_Yg" />
   </head>
   <body>
     <div id="root"></div>
